@@ -1,6 +1,6 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 10,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-04-07T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-18T00:00:00Z",
+      "count": 8,
+      "uniques": 6
     }
   ]
 }
