@@ -1,3 +1,9 @@
+2022-04-18T16:22:18Z:
+* notice: last 14d: all unq: 10 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 246 126 / 248 128
+* notice: next accum: outdated-all outdated-unq / all unq: 246 126 / 256 134
+* notice: prev json diff // prev day diff: unq all: +6 +8 / -0 -0 // +6 +8 / -0 -0
+
 2022-04-17T01:09:54Z:
 * notice: last 14d: all unq: 2 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 237 119 / 248 128
